[package]
name = "crypto_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
time = { version = "0.3", features = ["formatting", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
anyhow = "1"
csv = "1"
colored = "3.1.1"
reqwest = { version = "0.13.1", features = ["json","query"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22.1"
http = "1.4.0"
rust_decimal = { version = "1.34", features = ["serde-str"] }
